--- a/service/sss-agent.service
+++ b/service/sss-agent.service
@@ -15,6 +15,7 @@ User=root
 Group=root
 WorkingDirectory=/opt/sss/agent/
 ExecStart=/usr/bin/python3 /opt/sss/agent/client-linux.py SERVER=sss_host USER=sss_user PASSWORD=sss_pass PORT=sss_port
+ExecReload=/bin/kill -HUP $MAINPID
 Restart=always
 #Environment=DEBUG=true
 
