--- a/service/status-server.service
+++ b/service/status-server.service
@@ -2,7 +2,8 @@
 Description=ServerStatus-Server
 After=network.target
 [Service]
-ExecStart=/usr/local/ServerStatus/server/sergate --config=/usr/local/ServerStatus/server/config.json --web-dir=/usr/local/ServerStatus/web
+EnvironmentFile=-/usr/local/ServerStatus/server/config.conf
+ExecStart=/usr/local/ServerStatus/server/sergate --port $PORT --config=/usr/local/ServerStatus/server/config.json --web-dir=/usr/local/ServerStatus/web
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
 [Install]
