--- a/Dockerfile-caddy
+++ b/Dockerfile-caddy
@@ -21,7 +21,8 @@ RUN apt-get update -y
 RUN apt-get install -y debian-keyring debian-archive-keyring apt-transport-https curl
 RUN curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/gpg.key" | tee /etc/apt/trusted.gpg.d/caddy-stable.asc
 RUN curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt" | tee /etc/apt/sources.list.d/caddy-stable.list
-RUN  apt-get install caddy -y
+RUN apt-get install caddy -y
+RUN apt-get clean
 
 COPY --from=builder server /ServerStatus/server/
 COPY --from=builder web /usr/share/caddy/
