--- a/plugin/docker-compose-caddy.yml
+++ b/plugin/docker-compose-caddy.yml
@@ -4,7 +4,7 @@ services:
       context: ..
       dockerfile: Dockerfile-caddy
     image: looprt/serverstatus_server:caddy
-    container_name: serverstatus
+    container_name: serverstatus_server
     restart: unless-stopped
     networks:
       serverstatus-network:
