--- a/plugin/docker-compose-caddy.yml
+++ b/plugin/docker-compose-caddy.yml
@@ -1,10 +1,10 @@
 services:
   serverstatus:
     build:
-      context: ..
+      context: .
       dockerfile: Dockerfile-caddy
     image: looprt/serverstatus_server:caddy
-    container_name: serverstatus_server
+    container_name: serverstatus
     restart: unless-stopped
     networks:
       serverstatus-network:
@@ -19,7 +19,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile-telegram
-    image: serverstatus_bot
+    image: looprt/serverstatus_bot
     container_name: bot4sss
     restart: unless-stopped
     networks:
@@ -28,6 +28,7 @@ services:
     environment:
       - TG_CHAT_ID=${TG_CHAT_ID}
       - TG_BOT_TOKEN=${TG_BOT_TOKEN}
+      - SERVER_DOMAIN=${SERVER_DOMAIN}
 
 networks:
   serverstatus-network:
