--- a/plugin/Dockerfile-caddy
+++ b/plugin/Dockerfile-caddy
@@ -6,7 +6,7 @@ LABEL version="0.0.1"
 
 RUN apt-get update -y && apt-get -y install gcc g++ make libcurl4-openssl-dev
 
-COPY . .
+COPY .. .
 
 WORKDIR /server
 
@@ -27,7 +27,7 @@ RUN apt-get clean
 
 COPY --from=builder server /ServerStatus/server/
 COPY --from=builder web /usr/share/caddy/
-COPY shell/start_caddy.sh /ServerStatus/server/
+COPY ../shell/start_caddy.sh /ServerStatus/server/
 RUN chmod +x start_caddy.sh
 
 # china time
