--- a/plugin/Dockerfile-caddy
+++ b/plugin/Dockerfile-caddy
@@ -3,32 +3,35 @@ FROM debian:stable-slim AS builder
 
 LABEL maintainer="jumploop"
 LABEL version="0.0.1"
+ARG WORK=/root
+ARG BRANCH=master
 
-RUN apt-get update -y && apt-get -y install gcc g++ make libcurl4-openssl-dev
+RUN apt-get update -y && apt-get -y install gcc g++ make libcurl4-openssl-dev wget unzip
 
-COPY .. .
+RUN wget -q --no-check-certificate https://github.com/jumploop/ServerStatus/archive/refs/heads/$BRANCH.zip -P $WORK && \
+    unzip $WORK/$BRANCH.zip -d $WORK && rm -rf $WORK/*.zip
 
-WORKDIR /server
+WORKDIR $WORK/ServerStatus-$BRANCH/server
 
 RUN make -j
 RUN pwd && ls -a
 # glibc env run
 
 FROM debian:latest
+
+ARG WORK=/root
+ARG BRANCH=master
+
 RUN mkdir -p /ServerStatus/server/
 WORKDIR /ServerStatus/server/
 # install caddy
-RUN apt-get update -y
-RUN apt-get install -y debian-keyring debian-archive-keyring apt-transport-https curl
-RUN curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/gpg.key" | tee /etc/apt/trusted.gpg.d/caddy-stable.asc
-RUN curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt" | tee /etc/apt/sources.list.d/caddy-stable.list
-RUN apt-get install caddy -y
-RUN apt-get clean
-
-COPY --from=builder server /ServerStatus/server/
-COPY --from=builder web /usr/share/caddy/
-COPY ../shell/start_caddy.sh /ServerStatus/server/
-RUN chmod +x start_caddy.sh
+RUN apt-get update -y && apt-get install -y debian-keyring debian-archive-keyring apt-transport-https curl && \
+    curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/gpg.key" | tee /etc/apt/trusted.gpg.d/caddy-stable.asc && \
+    curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt" | tee /etc/apt/sources.list.d/caddy-stable.list && \
+    apt-get install caddy -y &&  apt-get clean
+COPY --from=builder $WORK/ServerStatus-$BRANCH/server /ServerStatus/server/
+COPY --from=builder $WORK/ServerStatus-$BRANCH/web /usr/share/caddy/
+RUN curl -1sLf "https://raw.githubusercontent.com/jumploop/ServerStatus/master/shell/start_caddy.sh" | tee start_caddy.sh && chmod +x start_caddy.sh
 
 # china time
 ENV TZ=Asia/Shanghai
