update docker file

--- a/plugin/Dockerfile-caddy
+++ b/plugin/Dockerfile-caddy
@@ -25,10 +25,10 @@ ARG BRANCH=master
 RUN mkdir -p /ServerStatus/server/
 WORKDIR /ServerStatus/server/
 # install caddy
-RUN apt-get update -y && apt-get install -y debian-keyring debian-archive-keyring apt-transport-https curl && \
-    curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/gpg.key" | tee /etc/apt/trusted.gpg.d/caddy-stable.asc && \
-    curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt" | tee /etc/apt/sources.list.d/caddy-stable.list && \
-    apt-get install caddy -y &&  apt-get clean
+RUN apt-get update -y && apt-get install -y debian-keyring debian-archive-keyring apt-transport-https curl  \
+    &&  curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/gpg.key" | tee /etc/apt/trusted.gpg.d/caddy-stable.asc  \
+    &&  curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt" | tee /etc/apt/sources.list.d/caddy-stable.list  \
+    &&  apt-get install caddy -y &&  apt-get clean
 COPY --from=builder $WORK/ServerStatus-$BRANCH/server /ServerStatus/server/
 COPY --from=builder $WORK/ServerStatus-$BRANCH/web /usr/share/caddy/
 RUN curl -1sLf "https://raw.githubusercontent.com/jumploop/ServerStatus/master/shell/start_caddy.sh" | tee start_caddy.sh && chmod +x start_caddy.sh
