--- a/plugin/Dockerfile-caddy
+++ b/plugin/Dockerfile-caddy
@@ -15,12 +15,10 @@ WORKDIR $WORK/ServerStatus-$BRANCH/server
 
 RUN make -j
 RUN pwd && ls -a
+RUN mv $WORK/ServerStatus-$BRANCH/* /
 # glibc env run
 
 FROM debian:latest
-
-ARG WORK=/root
-ARG BRANCH=master
 
 RUN mkdir -p /ServerStatus/server/
 WORKDIR /ServerStatus/server/
@@ -29,8 +27,8 @@ RUN apt-get update -y && apt-get install -y debian-keyring debian-archive-keyrin
     &&  curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/gpg.key" | tee /etc/apt/trusted.gpg.d/caddy-stable.asc  \
     &&  curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt" | tee /etc/apt/sources.list.d/caddy-stable.list  \
     &&  apt-get install caddy -y &&  apt-get clean
-COPY --from=builder $WORK/ServerStatus-$BRANCH/server /ServerStatus/server/
-COPY --from=builder $WORK/ServerStatus-$BRANCH/web /usr/share/caddy/
+COPY --from=builder server /ServerStatus/server/
+COPY --from=builder web /usr/share/caddy/
 RUN curl -1sLf "https://raw.githubusercontent.com/jumploop/ServerStatus/master/shell/start_caddy.sh" | tee start_caddy.sh && chmod +x start_caddy.sh
 
 # china time
