--- a/docker-compose/Dockerfile-caddy
+++ b/docker-compose/Dockerfile-caddy
@@ -23,10 +23,10 @@ FROM debian:latest
 RUN mkdir -p /ServerStatus/server/
 WORKDIR /ServerStatus/server/
 # install caddy
-RUN apt-get update -y && apt-get install -y debian-keyring debian-archive-keyring apt-transport-https curl  \
-    &&  curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/gpg.key" | tee /etc/apt/trusted.gpg.d/caddy-stable.asc  \
+RUN apt-get update && apt-get install -y debian-keyring debian-archive-keyring apt-transport-https curl  \
+    &&  curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/gpg.key" | gpg --dearmor -o /usr/share/keyrings/caddy-stable-archive-keyring.gpg  \
     &&  curl -1sLf "https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt" | tee /etc/apt/sources.list.d/caddy-stable.list  \
-    &&  apt-get install caddy -y &&  apt-get clean
+    &&  apt-get install caddy -y &&  apt-get clean && rm -rf /var/lib/apt/lists/*
 COPY --from=builder server /ServerStatus/server/
 COPY --from=builder web /usr/share/caddy/
 RUN curl -1sLf "https://raw.githubusercontent.com/jumploop/ServerStatus/master/shell/start_caddy.sh" | tee start_caddy.sh && chmod +x start_caddy.sh
