--- a/docker-compose/docker-compose-telegram.yml
+++ b/docker-compose/docker-compose-telegram.yml
@@ -1,17 +1,16 @@
-version: "3"
 services:
   serverstatus:
     build:
       context: ..
       dockerfile: Dockerfile
-    image: serverstatus_server
+    image: looprt/serverstatus_server
     container_name: serverstatus
     restart: unless-stopped
     networks:
       serverstatus-network:
         ipv4_address: 172.23.0.2
     volumes:
-      - ../server/config.json:/ServerStatus/server/config.json 
+      - ../server/config.json:/ServerStatus/server/config.json
       - ../web/json:/usr/share/nginx/html/json
     ports:
       - 35601:35601
@@ -20,7 +19,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile-telegram
-    image: serverstatus_bot
+    image: looprt/serverstatus_bot
     container_name: bot4sss
     restart: unless-stopped
     networks:
@@ -29,6 +28,7 @@ services:
     environment:
       - TG_CHAT_ID=${TG_CHAT_ID}
       - TG_BOT_TOKEN=${TG_BOT_TOKEN}
+      - SERVER_DOMAIN=${SERVER_DOMAIN}
 
 networks:
   serverstatus-network:
