--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: "3"
 services:
   serverstatus:
     build:
       context: .
       dockerfile: Dockerfile
-    image: serverstatus_server
+    image: looprt/serverstatus_server
     healthcheck:
       test: curl --fail http://localhost:80 || bash -c 'kill -s 15 -1 && (sleep 10; kill -s 9 -1)'
       interval: 30s
@@ -16,7 +15,7 @@ services:
       serverstatus-network:
         ipv4_address: 172.23.0.2
     volumes:
-      - ./server/config.json:/ServerStatus/server/config.json 
+      - ./server/config.json:/ServerStatus/server/config.json
       - ./web/json:/usr/share/nginx/html/json
     ports:
       - 35601:35601
