--- a/server/config.json
+++ b/server/config.json
@@ -90,6 +90,12 @@
 			"callback": "https://yourSMSurl"
 		},
 		{
+			"name": "packet loss rate warning",
+			"rule": "(ping_10010>10|ping_189>10|ping_10086>10)&(host='sgp'|host='qqhk'|host='hk-21-x'|host='hk-31-x')",
+			"interval": 3600,
+			"callback": "https://yourSMSurl"
+		},
+		{
 			"name": "you can parse an expression combining any known field",
 			"rule": "load_5>3",
 			"interval": 900,
